@@ -88,6 +88,66 @@ static inline void IRQdoMutexLock(pthread_mutex_t *mutex,
 
 /**
  * \internal
+ * Implementation code to lock a mutex to a specified depth level.
+ * Must be called with interrupts disabled. If the mutex is not recursive the
+ * mutex is locked only one level deep regardless of the depth value.
+ * \param mutex mutex to be locked
+ * \param d The instance of FastInterruptDisableLock used to disable interrupts
+ * \param depth recursive depth at which the mutex will be locked. Zero
+ * means the mutex is locked one level deep (as if lock() was called once),
+ * one means two levels deep, etc. 
+ */
+static inline void IRQdoMutexLockToDepth(pthread_mutex_t *mutex,
+        FastInterruptDisableLock& d, unsigned int depth)
+{
+    void *p=reinterpret_cast<void*>(Thread::IRQgetCurrentThread());
+    if(mutex->owner==0)
+    {
+        mutex->owner=p;
+        if(mutex->recursive>=0) mutex->recursive=depth;
+        return;
+    }
+
+    //This check is very important. Without this attempting to lock the same
+    //mutex twice won't cause a deadlock because the Thread::IRQwait() is
+    //enclosed in a while(owner!=p) which is immeditely false.
+    if(mutex->owner==p)
+    {
+        if(mutex->recursive>=0)
+        {
+            mutex->recursive=depth;
+            return;
+        } else errorHandler(MUTEX_DEADLOCK); //Bad, deadlock
+    }
+
+    WaitingList waiting; //Element of a linked list on stack
+    waiting.thread=p;
+    waiting.next=0; //Putting this thread last on the list (lifo policy)
+    if(mutex->first==0)
+    {
+        mutex->first=&waiting;
+        mutex->last=&waiting;
+    } else {
+        mutex->last->next=&waiting;
+        mutex->last=&waiting;
+    }
+
+    //The while is necessary because some other thread might call wakeup()
+    //on this thread. So the thread can wakeup also for other reasons not
+    //related to the mutex becoming free
+    while(mutex->owner!=p)
+    {
+        Thread::IRQwait();//Returns immediately
+        {
+            FastInterruptEnableLock eLock(d);
+            Thread::yield(); //Now the IRQwait becomes effective
+        }
+    }
+    if(mutex->recursive>=0) mutex->recursive=depth;
+}
+
+/**
+ * \internal
  * Implementation code to unlock a mutex.
  * Must be called with interrupts disabled
  * \param mutex mutex to unlock
@@ -122,6 +182,44 @@ static inline bool IRQdoMutexUnlock(pthread_mutex_t *mutex)
     }
     mutex->owner=0;
     return false;
+}
+
+/**
+ * \internal
+ * Implementation code to unlock all depth levels of a mutex.
+ * Must be called with interrupts disabled
+ * \param mutex mutex to unlock
+ * \return the mutex recursive depth (how many times it was locked by the
+ * owner). Zero means the mutex is locked one level deep (lock() was called
+ * once), one means two levels deep, etc. 
+ */
+static inline unsigned int IRQdoMutexUnlockAllDepthLevels(pthread_mutex_t *mutex)
+{
+//    Safety check removed for speed reasons
+//    if(mutex->owner!=reinterpret_cast<void*>(Thread::IRQgetCurrentThread()))
+//    {
+//        errorHandler(MUTEX_UNLOCK_NOT_OWNER);
+//        return false;
+//    }
+    if(mutex->first!=0)
+    {
+        Thread *t=reinterpret_cast<Thread*>(mutex->first->thread);
+        t->IRQwakeup();
+        mutex->owner=mutex->first->thread;
+        mutex->first=mutex->first->next;
+
+        if(mutex->recursive<0) return 0;
+        unsigned int result=mutex->recursive;
+        mutex->recursive=0;
+        return result;
+    }
+    
+    mutex->owner=0;
+    
+    if(mutex->recursive<0) return 0;
+    unsigned int result=mutex->recursive;
+    mutex->recursive=0;
+    return result;
 }
 
 } //namespace miosix
